# KawusapiCC

./: .gitignore  .gitmodules  README.md  settings.gradle
engine/archive_engine/: .gitignore  build.gradle  consumer-rules.pro  settings.gradle
engine/archive_engine/src/main/cpp/: CMakeLists.txt
engine/archive_engine/src/main/cpp/archive/: CMakeLists.txt
engine/archive_engine/src/main/cpp/archive/include/ae/: archive.hh
engine/archive_engine/src/main/cpp/archive/src/: archive.cc
engine/archive_engine/src/main/cpp/jni/: archive_jni.cpp  debug.h
engine/archive_engine/src/main/cpp/net/: CMakeLists.txt
engine/archive_engine/src/main/cpp/net/include/ae/: http.hh
engine/archive_engine/src/main/cpp/net/src/: http.cc
engine/archive_engine/src/main/cpp/tag/: CMakeLists.txt
engine/archive_engine/src/main/cpp/tag/include/ae/: tag.hh
engine/archive_engine/src/main/cpp/tag/src/: tag.cc
engine/archive_engine/src/main/cpp/util/: CMakeLists.txt
engine/archive_engine/src/main/cpp/util/include/ae/: base64.hh  hash.hh  log.hh  result.hh  sanitize.hh
engine/archive_engine/src/main/cpp/util/src/: base64.cc  md5.cc  sanitize.cc
engine/archive_engine/src/main/java/io/nava/archive_engine/: ArchiveEngine.java
kobuzapi/: build.gradle  consumer-rules.pro
kobuzapi/src/main/cpp/: CMakeLists.txt  kobuzapi_jni.cpp
kobuzapi/src/main/cpp/api/: requests.cc  requests.hh  service.cc  service.hh
kobuzapi/src/main/cpp/core/: credentials.cc  credentials.hh  errors.cc  errors.hh  json.cc  json.hh  models.hh  signing.hh
kobuzapi/src/main/cpp/download/: download.cc  download.hh
kobuzapi/src/main/cpp/metadata/: config.hh  embedder.cc  embedder.hh  extractor.cc  extractor.hh  performers.cc  performers.hh
kobuzapi/src/main/java/io/nava/kobuzapi/: Kobuzapi.java
